--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <main>
         <section id="telefone">
             <iframe src="home.html" name="tela" id="tela" frameborder="0">
-        
+                Seu navegador não é compativel....
             </iframe>
         </section>
         <section id="redes-sociais">
-            <ul id="lista-redes-sociais">
-                <li><a href="#" id="github-iframe">a</a></li>
-            </ul>
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a>
         </section>
     </main>
 </body>
