--- a/github.html
+++ b/github.html
@@ -5,29 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0%;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        ::-webkit-scrollbar{
-            width: 0;
-            height: 0;
-        }
-        img{
-            width: 100vw;
-        }
-        a{
-            display: block;
-            background-color: darkred;
-            padding: 15px;
-            text-align: center;
-            font-weight: bold;
-            text-decoration: none;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="estilo/redes-socias.css">
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="">
